--- a/templates/backend/event/edit.html.twig
+++ b/templates/backend/event/edit.html.twig
@@ -1,10 +1,10 @@
 {% extends '@adminkit/base.html.twig' %}
 
-{% block title %}Usuários | {{backend_name}} {% endblock %}
+{% block title %}Eventos | {{backend_name}} {% endblock %}
 
 {% block body %}
     <div class="d-flex justify-content-between mb-3">
-        <h1 class="h3 d-inline align-middle">Cursos</h1>
+        <h1 class="h3 d-inline align-middle">Eventos</h1>
     </div>
 
     <div class="row">
@@ -12,14 +12,14 @@
             <div class="card">
                 <div class="card-header pb-0">
                     
-                    <h5 class="card-title mb-0">Editar Usuário</h5>
+                    <h5 class="card-title mb-0">Editar Evento</h5>
                 </div>
                 <div class="card-body">
-                        {{ include('@backend/user/_form.html.twig', {'button_label': 'Atualizar'}) }}
+                        {{ include('@backend/event/_form.html.twig', {'button_label': 'Atualizar'}) }}
 
                     <div class="d-flex bd-highlight my-3">
-                        <a class="me-auto btn btn-link px-0" href="{{ path('app_user_index') }}">Voltar para lista</a>
-                        {{ include('@backend/user/_delete_form.html.twig') }}
+                        <a class="me-auto btn btn-link px-0" href="{{ path('app_event_index') }}">Voltar para lista</a>
+                        {{ include('@backend/event/_delete_form.html.twig') }}
                     </div>
                 </div>
             </div>
