--- a/templates/backend/template/adminkit/login.html.twig
+++ b/templates/backend/template/adminkit/login.html.twig
@@ -64,7 +64,7 @@
 											<label class="form-label">Senha</label>
 											<input class="form-control form-control-lg" type="password" name="_password" placeholder="Informe sua senha" />
 											<small>
-												<a href="index.html">Esqueceu a senha?</a>
+												<a href="#">Esqueceu a senha?</a>
 											</small>
 										</div>
 										<div>
