--- a/templates/backend/course/edit.html.twig
+++ b/templates/backend/course/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends '@adminkit/base.html.twig' %}
 
-{% block title %}Usuários | {{backend_name}} {% endblock %}
+{% block title %}Cursos | {{backend_name}} {% endblock %}
 
 {% block body %}
     <div class="d-flex justify-content-between mb-3">
@@ -12,17 +12,18 @@
             <div class="card">
                 <div class="card-header pb-0">
                     
-                    <h5 class="card-title mb-0">Editar Usuário</h5>
+                    <h5 class="card-title mb-0">Editar Curso</h5>
                 </div>
                 <div class="card-body">
-                        {{ include('@backend/user/_form.html.twig', {'button_label': 'Atualizar'}) }}
+                        {{ include('@backend/course/_form.html.twig', {'button_label': 'Atualizar'}) }}
 
                     <div class="d-flex bd-highlight my-3">
-                        <a class="me-auto btn btn-link px-0" href="{{ path('app_user_index') }}">Voltar para lista</a>
-                        {{ include('@backend/user/_delete_form.html.twig') }}
+                        <a class="me-auto btn btn-link px-0" href="{{ path('app_course_index') }}">Voltar para lista</a>
+                        {{ include('@backend/course/_delete_form.html.twig') }}
                     </div>
                 </div>
             </div>
         </div>
     </div>
 {% endblock %}
+
