--- a/templates/backend/dashboard/index.html.twig
+++ b/templates/backend/dashboard/index.html.twig
@@ -1,20 +1,50 @@
 {% extends '@adminkit/base.html.twig' %}
 
-{% block title %}Hello DashboardController!{% endblock %}
+{% block title %}Dashboard | {{backend_name}} {% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="d-flex mb-5">
+        <div class="w-100">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col mt-0">
+                                    <h5 class="card-title">Eventos</h5>
+                                </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/src/Controller/DashboardController.php'|file_link(0) }}">src/Controller/DashboardController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/templates/dashboard/index.html.twig'|file_link(0) }}">templates/dashboard/index.html.twig</a></code></li>
-    </ul>
-</div>
+                                <div class="col-auto">
+                                    <div class="stat text-primary"><i class="align-middle" data-feather="calendar"></i></div>
+                                </div>
+                            </div>
+                            <h1 class="mt-1 mb-3">{{events_count}}</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col mt-0">
+                                    <h5 class="card-title">Participantes</h5>
+                                </div>
+
+                                <div class="col-auto">
+                                    <div class="stat text-primary"><i class="align-middle" data-feather="users"></i></div>
+                                </div>
+                            </div>
+                            <h1 class="mt-1 mb-3">00.000</h1>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    {{ include('@backend/event/_list.html.twig') }}
+
+
 {% endblock %}
