--- a/templates/backend/template/adminkit/footer.html.twig
+++ b/templates/backend/template/adminkit/footer.html.twig
@@ -10,7 +10,7 @@
             <div class="col-6 text-end">
                 <ul class="list-inline">
                     <li class="list-inline-item text-sm">
-                        Developed by Luiz Albano - IFSP-PTB.
+                        Developed by Grupo 10 - UFABC-Eng. Software.
                     </li>
                 </ul>
             </div>
