--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '@adminkit/base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Usuários | {{backend_name}} {% endblock %}
 
 {% block body %}
 
@@ -13,19 +13,6 @@
         <div class="col-12">
             <div class="card">
                 <div class="card-header pb-0">
-                    <div class="card-actions float-end">
-                        <div class="dropdown position-relative">
-                            <a href="#" data-bs-toggle="dropdown" data-bs-display="static">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal align-middle"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
-                            </a>
-
-                            <div class="dropdown-menu dropdown-menu-end">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </div>
-                    </div>
                     <h5 class="card-title mb-0">Lista de Usuários</h5>
                 </div>
                 <div class="card-body">
@@ -46,8 +33,10 @@
                                 <td>{{ user.email }}</td>
                                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
                                 <td>
-                                    <a class="btn btn-sm" href="{{ path('app_user_show', {'id': user.id}) }}">ver</a>
-                                    <a class="btn btn-sm" href="{{ path('app_user_edit', {'id': user.id}) }}">editar</a>
+                                    <div class="btn-group" role="group" aria-label="Basic example">
+                                        <a class="btn btn-info" href="{{ path('app_user_show', {'id': user.id}) }}" title="Visualizar"><i class="align-middle me-1" data-feather="eye"></i></a>
+                                        <a class="btn btn-info" href="{{ path('app_user_edit', {'id': user.id}) }}" title="Editar"><i class="align-middle me-1" data-feather="edit"></i></a>
+                                    </div>
                                 </td>
                             </tr>
                         {% else %}
