--- a/templates/backend/user/show.html.twig
+++ b/templates/backend/user/show.html.twig
@@ -1,34 +1,48 @@
 {% extends '@adminkit/base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}Usuários | {{backend_name}} {% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <div class="d-flex justify-content-between mb-3">
+        <h1 class="h3 d-inline align-middle">Cursos</h1>
+        <a class="btn btn-primary ms-2" href="{{ url('app_course_new') }}">Criar novo <i data-feather="plus"></i></a>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header pb-0">
+                    
+                    <h5 class="card-title mb-0">Dados do Curso</h5>
+                </div>
+                <div class="card-body">
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th width="20%">ID</th>
+                                <td>{{ user.id }}</td>
+                            </tr>
+                            <tr>
+                                <th>Email</th>
+                                <td>{{ user.email }}</td>
+                            </tr>
+                            <tr>
+                                <th>Roles</th>
+                                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
 
-    <a href="{{ path('app_user_edit', {'id': user.id}) }}">edit</a>
+                    <div class="d-flex bd-highlight mb-3">
+                        <a class="me-auto btn btn-link" href="{{ path('app_user_index') }}">Voltar para lista</a>
+                        <a class="me-2 btn btn-info" href="{{ path('app_user_edit', {'id': user.id}) }}">Editar</a>
+                        {{ include('@backend/user/_delete_form.html.twig') }}
+                    </div>
+                
+                </div>
+            </div>
+        </div>
+    </div>
 
-    {{ include('@backend/user/_delete_form.html.twig') }}
 {% endblock %}
